--- a/res/layout/frame_main.xml
+++ b/res/layout/frame_main.xml
@@ -3,12 +3,23 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#D6FFD6" >
-
+    
+    <TextView
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/yggy_photo" />
+    
+    <Gallery
+      android:id="@+id/gallery1"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content" />
+    
     <ImageView
+        android:id="@+id/yggy"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitCenter"
-        android:src="@drawable/android" />
+        android:src="@drawable/yggy" />
 
     <Button
         android:id="@+id/button3"
